--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset= UTF-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
-<title>通向AGI</title>
+<title>Towards AGI</title>
 <style>
 <!--
  /* Font Definitions */
